90minutParser/src/parser90/minut90Parser.java
package parser90;

import java.util.List;

import org.antlr.v4.runtime.ANTLRInputStream;
import org.antlr.v4.runtime.CommonTokenStream;
import org.antlr.v4.runtime.Parser;
import org.antlr.v4.runtime.ParserRuleContext;
import org.antlr.v4.runtime.RecognitionException;
import org.antlr.v4.runtime.RuntimeMetaData;
import org.antlr.v4.runtime.Token;
import org.antlr.v4.runtime.TokenStream;
import org.antlr.v4.runtime.Vocabulary;
import org.antlr.v4.runtime.VocabularyImpl;
import org.antlr.v4.runtime.atn.ATN;
import org.antlr.v4.runtime.atn.ATNDeserializer;
import org.antlr.v4.runtime.atn.ParserATNSimulator;
import org.antlr.v4.runtime.atn.PredictionContextCache;
import org.antlr.v4.runtime.dfa.DFA;
import org.antlr.v4.runtime.tree.ParseTree;
import org.antlr.v4.runtime.tree.ParseTreeListener;
import org.antlr.v4.runtime.tree.TerminalNode;

import java.util.Iterator;
import java.io.BufferedReader;
import java.io.EOFException;
import java.io.FileNotFoundException;
import java.io.FileReader;
import java.io.IOException;
import java.util.ArrayList;
import java.util.Arrays;
import java.util.Collection;

@SuppressWarnings({ "all", "warnings", "unchecked", "unused", "cast" })
public class minut90Parser extends Parser {
	static {
		RuntimeMetaData.checkVersion("4.5", RuntimeMetaData.VERSION);
	}

	protected static final DFA[] _decisionToDFA;
	protected static final PredictionContextCache _sharedContextCache = new PredictionContextCache();
	public static final int T__0 = 1, T__1 = 2, T__2 = 3, OKR_L = 4, OKR_R = 5, KLA_L = 6, KLA_R = 7, CU = 8, MECZE = 9,
			PUNKTY = 10, ZWYCIESTWA = 11, REMISY = 12, PORAZKI = 13, STRZELONE = 14, STRACONE = 15, STRING = 16,
			WS = 17, INT = 18, DIGIT = 19;
	public static final int RULE_r = 0, RULE_liga = 1, RULE_druzyny = 2, RULE_druzyna = 3, RULE_bramki = 4;
	public static final String[] ruleNames = { "r", "liga", "druzyny", "druzyna", "bramki" };

	private static final String[] _LITERAL_NAMES = { null, "'liga'", "'druzyna'", "'bramki'", "'('", "')'", "'{'",
			"'}'", "'\"'" };
	private static final String[] _SYMBOLIC_NAMES = { null, null, null, null, "OKR_L", "OKR_R", "KLA_L", "KLA_R", "CU",
			"MECZE", "PUNKTY", "ZWYCIESTWA", "REMISY", "PORAZKI", "STRZELONE", "STRACONE", "STRING", "WS", "INT",
			"DIGIT" };
	public static final Vocabulary VOCABULARY = new VocabularyImpl(_LITERAL_NAMES, _SYMBOLIC_NAMES);

	/**
	 * @deprecated Use {@link #VOCABULARY} instead.
	 */
	@Deprecated
	public static final String[] tokenNames;
	static {
		tokenNames = new String[_SYMBOLIC_NAMES.length];
		for (int i = 0; i < tokenNames.length; i++) {
			tokenNames[i] = VOCABULARY.getLiteralName(i);
			if (tokenNames[i] == null) {
				tokenNames[i] = VOCABULARY.getSymbolicName(i);
			}

			if (tokenNames[i] == null) {
				tokenNames[i] = "<INVALID>";
			}
		}
	}

	@Override
	@Deprecated
	public String[] getTokenNames() {
		return tokenNames;
	}

	@Override

	public Vocabulary getVocabulary() {
		return VOCABULARY;
	}

	@Override
	public String getGrammarFileName() {
		return "minut90.g4";
	}

	@Override
	public String[] getRuleNames() {
		return ruleNames;
	}

	@Override
	public String getSerializedATN() {
		return _serializedATN;
	}

	@Override
	public ATN getATN() {
		return _ATN;
	}

	public minut90Parser(TokenStream input) {
		super(input);
		_interp = new ParserATNSimulator(this, _ATN, _decisionToDFA, _sharedContextCache);
	}

	public static class RContext extends ParserRuleContext {
		public LigaContext liga() {
			return getRuleContext(LigaContext.class, 0);
		}

		public RContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}

		@Override
		public int getRuleIndex() {
			return RULE_r;
		}

		@Override
		public void enterRule(ParseTreeListener listener) {
			if (listener instanceof minut90Listener)
				((minut90Listener) listener).enterR(this);
		}

		@Override
		public void exitRule(ParseTreeListener listener) {
			if (listener instanceof minut90Listener)
				((minut90Listener) listener).exitR(this);
		}
	}

	public final RContext r() throws RecognitionException {
		RContext _localctx = new RContext(_ctx, getState());
		enterRule(_localctx, 0, RULE_r);
		try {
			enterOuterAlt(_localctx, 1);
			{
				setState(10);
				liga();
			}
		} catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		} finally {
			exitRule();
		}
		return _localctx;
	}

	public static class LigaContext extends ParserRuleContext {
		public TerminalNode OKR_L() {
			return getToken(minut90Parser.OKR_L, 0);
		}

		public TerminalNode STRING() {
			return getToken(minut90Parser.STRING, 0);
		}

		public TerminalNode OKR_R() {
			return getToken(minut90Parser.OKR_R, 0);
		}

		public TerminalNode KLA_L() {
			return getToken(minut90Parser.KLA_L, 0);
		}

		public DruzynyContext druzyny() {
			return getRuleContext(DruzynyContext.class, 0);
		}

		public TerminalNode KLA_R() {
			return getToken(minut90Parser.KLA_R, 0);
		}

		public LigaContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}

		@Override
		public int getRuleIndex() {
			return RULE_liga;
		}

		@Override
		public void enterRule(ParseTreeListener listener) {
			if (listener instanceof minut90Listener)
				((minut90Listener) listener).enterLiga(this);
		}

		@Override
		public void exitRule(ParseTreeListener listener) {
			if (listener instanceof minut90Listener)
				((minut90Listener) listener).exitLiga(this);
		}
	}

	public final LigaContext liga() throws RecognitionException {
		LigaContext _localctx = new LigaContext(_ctx, getState());
		enterRule(_localctx, 2, RULE_liga);
		try {
			enterOuterAlt(_localctx, 1);
			{
				setState(12);
				match(T__0);
				setState(13);
				match(OKR_L);
				setState(14);
				match(STRING);
				setState(15);
				match(OKR_R);
				setState(16);
				match(KLA_L);
				setState(17);
				druzyny();
				setState(18);
				match(KLA_R);
			}
		} catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		} finally {
			exitRule();
		}
		return _localctx;
	}

	public static class DruzynyContext extends ParserRuleContext {
		public DruzynaContext druzyna() {
			return getRuleContext(DruzynaContext.class, 0);
		}

		public DruzynyContext druzyny() {
			return getRuleContext(DruzynyContext.class, 0);
		}

		public DruzynyContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}

		@Override
		public int getRuleIndex() {
			return RULE_druzyny;
		}

		@Override
		public void enterRule(ParseTreeListener listener) {
			if (listener instanceof minut90Listener)
				((minut90Listener) listener).enterDruzyny(this);
		}

		@Override
		public void exitRule(ParseTreeListener listener) {
			if (listener instanceof minut90Listener)
				((minut90Listener) listener).exitDruzyny(this);
		}
	}

	public final DruzynyContext druzyny() throws RecognitionException {
		DruzynyContext _localctx = new DruzynyContext(_ctx, getState());
		enterRule(_localctx, 4, RULE_druzyny);
		try {
			setState(24);
			switch (getInterpreter().adaptivePredict(_input, 0, _ctx)) {
			case 1:
				enterOuterAlt(_localctx, 1); {
				setState(20);
				druzyna();
				setState(21);
				druzyny();
			}
				break;
			case 2:
				enterOuterAlt(_localctx, 2); {
				setState(23);
				druzyna();
			}
				break;
			}
		} catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		} finally {
			exitRule();
		}
		return _localctx;
	}

	public static class DruzynaContext extends ParserRuleContext {
		public TerminalNode OKR_L() {
			return getToken(minut90Parser.OKR_L, 0);
		}

		public TerminalNode STRING() {
			return getToken(minut90Parser.STRING, 0);
		}

		public TerminalNode OKR_R() {
			return getToken(minut90Parser.OKR_R, 0);
		}

		public TerminalNode KLA_L() {
			return getToken(minut90Parser.KLA_L, 0);
		}

		public TerminalNode MECZE() {
			return getToken(minut90Parser.MECZE, 0);
		}

		public TerminalNode PUNKTY() {
			return getToken(minut90Parser.PUNKTY, 0);
		}

		public TerminalNode ZWYCIESTWA() {
			return getToken(minut90Parser.ZWYCIESTWA, 0);
		}

		public TerminalNode REMISY() {
			return getToken(minut90Parser.REMISY, 0);
		}

		public TerminalNode PORAZKI() {
			return getToken(minut90Parser.PORAZKI, 0);
		}

		public BramkiContext bramki() {
			return getRuleContext(BramkiContext.class, 0);
		}

		public TerminalNode KLA_R() {
			return getToken(minut90Parser.KLA_R, 0);
		}

		public DruzynaContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}

		@Override
		public int getRuleIndex() {
			return RULE_druzyna;
		}

		@Override
		public void enterRule(ParseTreeListener listener) {
			if (listener instanceof minut90Listener)
				((minut90Listener) listener).enterDruzyna(this);
		}

		@Override
		public void exitRule(ParseTreeListener listener) {
			if (listener instanceof minut90Listener)
				((minut90Listener) listener).exitDruzyna(this);
		}
	}

	public final DruzynaContext druzyna() throws RecognitionException {
		DruzynaContext _localctx = new DruzynaContext(_ctx, getState());
		enterRule(_localctx, 6, RULE_druzyna);
		try {
			enterOuterAlt(_localctx, 1);
			{
				setState(26);
				match(T__1);
				setState(27);
				match(OKR_L);
				setState(28);
				match(STRING);
				setState(29);
				match(OKR_R);
				setState(30);
				match(KLA_L);
				setState(31);
				match(MECZE);
				setState(32);
				match(PUNKTY);
				setState(33);
				match(ZWYCIESTWA);
				setState(34);
				match(REMISY);
				setState(35);
				match(PORAZKI);
				setState(36);
				bramki();
				setState(37);
				match(KLA_R);
			}
		} catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		} finally {
			exitRule();
		}
		return _localctx;
	}

	public static class BramkiContext extends ParserRuleContext {
		public TerminalNode OKR_L() {
			return getToken(minut90Parser.OKR_L, 0);
		}

		public TerminalNode OKR_R() {
			return getToken(minut90Parser.OKR_R, 0);
		}

		public TerminalNode KLA_L() {
			return getToken(minut90Parser.KLA_L, 0);
		}

		public TerminalNode STRZELONE() {
			return getToken(minut90Parser.STRZELONE, 0);
		}

		public TerminalNode STRACONE() {
			return getToken(minut90Parser.STRACONE, 0);
		}

		public TerminalNode KLA_R() {
			return getToken(minut90Parser.KLA_R, 0);
		}

		public BramkiContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}

		@Override
		public int getRuleIndex() {
			return RULE_bramki;
		}

		@Override
		public void enterRule(ParseTreeListener listener) {
			if (listener instanceof minut90Listener)
				((minut90Listener) listener).enterBramki(this);
		}

		@Override
		public void exitRule(ParseTreeListener listener) {
			if (listener instanceof minut90Listener)
				((minut90Listener) listener).exitBramki(this);
		}
	}

	public final BramkiContext bramki() throws RecognitionException {
		BramkiContext _localctx = new BramkiContext(_ctx, getState());
		enterRule(_localctx, 8, RULE_bramki);
		try {
			enterOuterAlt(_localctx, 1);
			{
				setState(39);
				match(T__2);
				setState(40);
				match(OKR_L);
				setState(41);
				match(OKR_R);
				setState(42);
				match(KLA_L);
				setState(43);
				match(STRZELONE);
				setState(44);
				match(STRACONE);
				setState(45);
				match(KLA_R);
			}
		} catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		} finally {
			exitRule();
		}
		return _localctx;
	}

	public static final ATN _ATN = new ATNDeserializer().deserialize(_serializedATN.toCharArray());
	static {
		_decisionToDFA = new DFA[_ATN.getNumberOfDecisions()];
		for (int i = 0; i < _ATN.getNumberOfDecisions(); i++) {
			_decisionToDFA[i] = new DFA(_ATN.getDecisionState(i), i);
		}
	}

	public static void main(String[] args) {
		try {
			ANTLRInputStream is = new ANTLRInputStream(new BufferedReader(new FileReader("liga")));
			// ANTLRInputStream is = new ANTLRInputStream(System.in);
			minut90Lexer ml = new minut90Lexer(is);
			CommonTokenStream tk = new CommonTokenStream(ml);
			minut90Parser mp = new minut90Parser(tk);
			parser90.minut90Parser.RContext rc = mp.r();
			// System.out.println(rc.getText());
			LigaContext lc = (LigaContext) rc.getChild(0);
			for (int i = 0; i < lc.getChildCount(); ++i) {
				ParseTree pt = lc.getChild(i);
				if (pt instanceof DruzynyContext) {
					DruzynyContext dc = (DruzynyContext) pt;
					for(int j = 0; j < dc.getChildCount(); ++j){
						System.out.println("\t" + dc);
					}
				} else {
					System.out.println(pt);
				}
			}
		} catch (IOException e) {
			e.printStackTrace();
		}

	}
}